--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://kateryna-borysenko.github.io/andersen-react-hw",
-  "name": "andersen-react-hw",
+  "name": "andersen-form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
