--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kateryna-borysenko.github.io/andersen-react-hw",
+  "homepage": "https://kateryna-borysenko.github.io/andersen-form",
   "name": "andersen-form",
   "version": "0.1.0",
   "private": true,
